lots of code changes and additions